# Tee-Times-Reminders

./: .gitignore  config.json.example  pyproject.toml  slack.py  suspended.json  tee.py
