[tool.poetry]
name = "tee_times"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
lxml = "^4.4.1"
pytz = "^2019.2"
requests_toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
